--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Simple Socket Chatting App</h1>
+    <script src="/socket.io/socket.io.js"></script>
+    <!-- https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js -->
+    <script src="/js/chat.js"></script>
 </body>
 </html>
