--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Simple Socket Chatting App</h1>
+    <div class="wrapper">
+
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <!-- https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js -->
     <script src="/js/chat.js"></script>
