--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,16 @@
 <body>
     <h1>Simple Socket Chatting App</h1>
     <div class="wrapper">
-
+        <div class="user-container">
+            대화명 : <input type="text" id="nickname">
+        </div>
+        <div class='display-container'>
+            <ul class="chatting-list"></ul>
+        </div>
+        <div class="input-container">
+            <input type="text" class="chatting-input">
+            <button class="send-button">전송</button>
+        </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <!-- https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js -->
